# react-native-dl-scan

./: .bundlewatchrc.json  .detoxrc.js  .gitattributes  .gitignore  .npmignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DLScan.podspec  DlScan.podspec  LICENSE  PRECOMMIT_FIXES.md  Package.swift  README.md  SECURITY.md  T007-summary.md  UPGRADE.md  babel.config.js  eslint.config.mjs  jest.config.js  jest.setup.js  nitro.json  package-lock.json  package.json  prompt.txt  react-native.config.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  e2e-tests.yml  performance.yml  release.yml  security.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  development_guidelines.md  project_purpose.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.simone/: 00_PROJECT_MANIFEST.md  MANIFEST.yaml
.simone/01_PROJECT_DOCS/: ARCHITECTURE.md  INCREMENTAL_REFACTORING_PROCESS.md  SIMULATOR_TESTING_GUIDE.md
.simone/04_GENERAL_TASKS/: T001_Fix_Failing_Test_Infrastructure.md  T003_iOS_Simulator_Example_App_Interactive_Setup.md  (+5 more)
__mocks__/: DLScanModule.js  expo-haptics.js  react-native-gesture-handler.d.ts  react-native-gesture-handler.js  react-native-permissions.js  react-native-reanimated.js  react-native-svg.js  react-native-vision-camera.js  react-native.js  svg.js
__tests__/: bridge.test.ts  confidenceTiers.test.ts  contradictionDetection.test.ts  imagesOnlyCapture.test.ts  index.test.ts  integration.test.ts  ocr-parsing.test.ts  ocrObservations.test.ts  performance.test.ts  ttaMerge.test.ts  typedValues.test.ts
android/: CMakeLists.txt  build.gradle
android/src/androidTest/java/com/dlscan/: HybridDLScanAndroidTest.kt  HybridDlScanAndroidTest.kt
android/src/main/assets/: docaligner_lcnet100.tflite
android/src/main/cpp/: dlscan_jni_bridge.cpp
android/src/main/java/com/dlscan/: DLScanPackage.kt  DlScanPackage.kt
android/src/main/java/com/margelo/nitro/dlscan/: AamvaLexer.kt  HybridDLScanAndroid.kt  HybridDlScanAndroid.kt
android/src/test/java/com/margelo/nitro/dlscan/: HeadshotFallbackBoundsTest.kt  TightenersTest.kt
coverage/: clover.xml  coverage-final.json  lcov.info
cpp/: CMakeLists.txt  constants.hpp  license_data.cpp  license_data.hpp  voter.cpp  voter.hpp  voter_c.cpp  voter_c.hpp
cpp/aamva/: aamva_lexer.cpp  aamva_lexer.hpp  aamva_lexer_c.cpp  aamva_lexer_c.hpp  aamva_parser.cpp  aamva_parser.hpp
cpp/detect/: detect_c.cpp  detect_c.hpp  doc_aligner.cpp  doc_aligner.hpp  field_detector.cpp  field_detector.hpp  model_interpreter.hpp  nanodet_decode.cpp  nanodet_decode.hpp  preprocess.cpp  preprocess.hpp
cpp/errors/: error_codes.cpp  error_codes.hpp
cpp/eval/: parser_eval.cpp  parser_eval_vision.cpp
cpp/eval/baselines/: all_us_states.txt
cpp/mrz/: mrz_data.hpp  mrz_parser.cpp  mrz_parser.hpp
cpp/ocr/: ocr_field_extractor.cpp  ocr_field_extractor.hpp  state_lookup.cpp  state_lookup.hpp
cpp/tests/: CMakeLists.txt  aamva_demographic_test.cpp  aamva_lexer_test.cpp  aamva_test.cpp  detect_c_test.cpp  doc_aligner_test.cpp  external_candidates_test.cpp  field_detector_test.cpp  mrz_test.cpp  nanodet_decode_test.cpp  ocr_field_test.cpp  ocr_shape_gates_test.cpp  preprocess_test.cpp  state_lookup_test.cpp  voter_test.cpp  yolo_postprocess_test.cpp
cpp/tests/fixtures/docaligner_golden/: corners_0.txt  corners_1.txt
cpp/tests/fixtures/nanodet_golden/: expected_0.json  expected_0.txt  expected_1.json  expected_1.txt  meta.json
cpp/yolo/: field_classes.cpp  field_classes.hpp  yolo_postprocess.cpp  yolo_postprocess.hpp
docs/: AAMVA_IMPLEMENTATION.md  ACCESSIBILITY.md  API.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  DATA_CARD.md  ERROR_HANDLING.md  EVALUATION.md  INTEGRATION.md  INTERNATIONALIZATION.md  LIMITATIONS.md  MODEL_CARD.md  MODEL_CONTRACT.md  OCR_CONFIGURATION.md  PROJECT_RESEARCH.md  REPRODUCIBILITY.md  SIMULATOR_TESTING.md  T005_Test_Failure_Analysis.md  TESTING_PATTERNS.md  TESTING_STRATEGY.md  THIRD_PARTY_MODELS.md  TRAINING_DETAILS.md  performance-optimization-summary.md
e2e/: README.md  T03_S08_E2E_IMPLEMENTATION_SUMMARY.md  deviceMatrix.test.ts  errorScenarios.test.ts  globalSetup.js  globalTeardown.js  globals.d.ts  jest.config.js  scanningFlow.test.ts  setup.ts  tsconfig.json
example/: .gitignore  App.tsx  Gemfile  README.md  app.json  babel.config.js  index.ts  metro.config.js  package.json  react-native.config.js
examples/: ocr-parsing-example.ts
ios/: AAMVAParser.swift  AamvaLexer.swift  BarcodeScanner.swift  ConfidenceIntegrationTests.swift  ConfidencePerformanceBenchmarks.swift  ConfidenceScoringTests.swift  DlScan.h  DlScan.mm  DlScanFrameProcessor.m  DlScanFrameProcessorPlugin.mm  DocumentDetector.swift  DocumentDetectorTests.swift  ErrorCorrectionTests.swift  ErrorTranslator.swift  HybridDLScanIOS.swift  HybridDlScanIOS.swift  LicenseParser.swift  MockOCRDataGenerator.swift  OCRFieldParser.swift  OCRFieldParserTests.swift  OCRIntegrationTests.swift  OCRQualityAssessment.swift  OCRQualityAssessmentTests.swift  OCRScanner.swift  OCRTextDetector.swift  OCRTextDetectorTests.swift  PDF417Detector.swift  StateRuleEngine.swift  StateRuleEngineTests.swift  StateSpecificIntegrationTests.swift
model-training/: .gitignore  GATE_RESULT_runtime.md  README.md  canary_field_axis.py  parity_check.py  requirements.txt  run_full_pipeline.sh  smoke_test_obb.py  train_doc_detector.py  train_field_detector.py  train_field_detector_mps_patched.py
model-training/envs/export-android/: pyproject.toml
model-training/envs/nanodet/: GATE_RESULT.md  pyproject.toml
model-training/envs/train/: pyproject.toml
models/: dl_scan_field_detector.tflite  version.json
scripts/: coverage-report.js
src/: NativeDlScan.ts  detector.ts  index.ts  index.tsx  native.ts  scanFrame.ts  types.ts  useLicenseScanner.ts
(+436 files in other folders)
